夸克盘扫码 debug